talleres/06/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: mf-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: ng-service
              servicePort: 80
          - path: /mysfits
            backend:
              serviceName: mf-service
              servicePort: 80
